# ElectronicEngineering

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
electronic_engineering/: __init__.py  develop.py  electronic_engineering.py
src/: __init__.py  calculations.py  cli.py  conversions.py
tests/: __init__.py  test_electronic_engineering.py
